--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,13 @@ buildscript {
     mavenCentral()
   }
   dependencies {
+    classpath 'com.android.tools.build:gradle:1.5.0'//jitpack
     classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
   }
 }
+
 
 allprojects {
   repositories {
@@ -36,3 +38,8 @@ task wrapper(type: Wrapper) {
 task clean(type: Delete) {
   delete rootProject.buildDir
 }
+
+
+
+
+
