--- a/dagger/build.gradle
+++ b/dagger/build.gradle
@@ -58,7 +58,7 @@ task javadocJar(type: Jar, dependsOn: javadoc) {
 }
 
 artifacts {
-//    archives shadowJar
+  archives shadowJar
     archives sourcesJar
     archives javadocJar
 }
