--- a/dagger/build.gradle
+++ b/dagger/build.gradle
@@ -74,7 +74,7 @@ task fatJar(type: ShadowJar) {
 
 
 artifacts {
-    // archives shadowJar
+      archives fatJar
     archives sourcesJar
     archives javadocJar
 }
