--- a/testmodule/build.gradle
+++ b/testmodule/build.gradle
@@ -72,4 +72,5 @@ dependencies {
   apt project(path: ':dagger-compiler', transitive: false)
   compile project(path: ':dagger', transitive: false)
   testCompile 'junit:junit:4.12'
+  compile fileTree(dir: 'libs', include: ['*.jar'])
 }
