--- a/testmodule/build.gradle
+++ b/testmodule/build.gradle
@@ -69,8 +69,9 @@ android {
 }
 
 dependencies {
-  apt project(path: ':dagger-compiler', transitive: false)
-  compile project(path: ':dagger', transitive: false)
-  testCompile 'junit:junit:4.12'
-  compile fileTree(dir: 'libs', include: ['*.jar'])
+  //apt project(path: ':dagger-compiler', transitive: false)
+  //compile project(path: ':dagger', transitive: false)
+  //testCompile 'junit:junit:4.12'
+  //compile fileTree(dir: 'libs', include: ['*.jar'])
+  compile files('libs/dagger.jar')
 }
