--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,10 @@ buildscript {
     mavenCentral()
   }
   dependencies {
-    classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+   // classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3'
+
+    classpath 'com.android.tools.build:gradle:1.5.0'
+    classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3' //jitpack Add this line
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
   }
