--- a/testmodule/build.gradle
+++ b/testmodule/build.gradle
@@ -10,7 +10,7 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.0.0'
+   //classpath 'com.android.tools.build:gradle:2.0.0'
     classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
 
   }
@@ -31,7 +31,7 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
-
+/*
   // build a jar with source files
   task sourcesJar(type: Jar) {
     from android.sourceSets.main.java.srcDirs
@@ -67,11 +67,13 @@ android {
     exclude 'META-INF/INDEX.LIST'
   }
 }
-
+*/
+}
 dependencies {
   //apt project(path: ':dagger-compiler', transitive: false)
   //compile project(path: ':dagger', transitive: false)
   //testCompile 'junit:junit:4.12'
   //compile fileTree(dir: 'libs', include: ['*.jar'])
   compile files('libs/dagger.jar')
+  apt files('libs/dagger-compiler-shadow')
 }
