--- a/testmodule/build.gradle
+++ b/testmodule/build.gradle
@@ -31,6 +31,11 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+
+  task copyLibs(type: Copy) {
+    from configurations.compile
+    into 'libs'
+  }
 /*
   // build a jar with source files
   task sourcesJar(type: Jar) {
@@ -74,6 +79,7 @@ dependencies {
   //compile project(path: ':dagger', transitive: false)
   //testCompile 'junit:junit:4.12'
   //compile fileTree(dir: 'libs', include: ['*.jar'])
-  compile files('libs/dagger.jar')
-  apt files('libs/dagger-compiler-shadow')
+ // compile files('libs/dagger.jar')
+  //compile files('libs/dagger.jar')
+  compile files('libs/dagger-compiler-shadow.jar')
 }
