--- a/dagger/build.gradle
+++ b/dagger/build.gradle
@@ -12,10 +12,11 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'com.github.johnrengelman.shadow'
+apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 dependencies {
     compile 'com.google.dagger:dagger:2.2'
-
 }
 
 shadowJar {
@@ -32,49 +33,42 @@ shadowJar {
     relocate 'dagger.Provides$Type', 'orchextra.dagger.Provides$Type'
     relocate 'dagger.internal', 'orchextra.dagger.internal'
     relocate 'dagger.producers', 'orchextra.dagger.producers'
-    baseName = 'dagger'
-    //baseName = 'dagger-shadow'
+
+    baseName = 'dagger-shadow'
     classifier = ''
 }
-
-apply plugin: 'maven'
-apply plugin: 'maven-publish'
-
 publishing {
     publications {
         shadow(MavenPublication) {
             from components.shadow
-           // artifactId = 'dagger-shadow'
-            artifactId = 'dagger'
+            artifactId = 'dagger-shadow'
+
         }
     }
 }
-
 task sourcesJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
     from sourceSets.main.allSource
 }
-
 task javadocJar(type: Jar, dependsOn: javadoc) {
     classifier = 'javadoc'
     from javadoc.destinationDir
 }
-
 configurations {
     shadow
     compile.extendsFrom provided
     provided.extendsFrom shadow
 }
-import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
+/*import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 
 task javaelJar(type: ShadowJar) {
     configurations = [project.configurations.shadow]
     from(project.sourceSets.main.output)
 }
-
-
+*/
 artifacts {
-      archives javaelJar
+       shadowJar
     archives sourcesJar
     archives javadocJar
 }
+build.dependsOn(shadowJar)
